<resources>
    <string name="app_name">Age Calculator</string>
    <string name="already_registered">Already Registered?</string>
    <string name="signin">SignIn</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="register">Register</string>
    <string name="sign_in" >Sign In</string>
    <string name="have_an_account">have an account?</string>
</resources>