<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <Button

        android:id="@+id/button_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="41dp"

        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e3"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="79dp"
        android:fontFamily="@font/lobster"

        android:text="@string/age_calculator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/e1"
        android:layout_width="261dp"
        android:layout_height="45dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/e2"
        android:layout_width="261dp"
        android:layout_height="45dp"

        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e1" />

    <EditText
        android:id="@+id/e3"
        android:layout_width="261dp"
        android:layout_height="45dp"

        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="15dp"
        android:text="@string/already_registered"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="108dp"
        android:text="@string/signin"
        android:onClick="login"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>