<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:foreground="@drawable/foreground_design"-->
    <!--        android:scaleType="centerCrop"-->
    <!--        android:src="@drawable/bg4"-->
    <!--        tools:layout_editor_absoluteX="0dp"-->
    <!--        tools:layout_editor_absoluteY="0dp" />-->

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:text="@string/have_an_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="96dp"
        android:text="@string/register"
        android:onClick="register"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button

        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="41dp"
        android:padding="14dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log2"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/log2"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"

        android:layout_marginEnd="75dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log1" />

    <EditText
        android:id="@+id/log1"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="79dp"
        android:fontFamily="@font/lobster"

        android:text="@string/age_calculator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>